# picturebook

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_e2e.sh
.claude/: settings.local.json
config/: settings.example.yaml
docs/superpowers/plans/: 2026-04-20-refactor-simplification.md
docs/superpowers/specs/: 2026-04-20-refactor-simplification-design.md
prompts/: character_description_extraction.jinja2  character_generation.jinja2  illustration_prompt.jinja2  page_content.jinja2  story_plan.jinja2
prompts/minimax/: character_generation.jinja2  illustration_generation.jinja2
src/magicstory_cli/cli/: app.py
src/magicstory_cli/cli/commands/: build.py  character.py  config_cmd.py  illustrate.py  plan.py  project.py  render.py
src/magicstory_cli/config/: loader.py
src/magicstory_cli/core/: __init__.py  book_renderer.py  build_pipeline.py  character_context.py  character_manager.py  illustrator.py  paths.py  project_scaffold.py  story_planner.py
src/magicstory_cli/models/: book.py  character.py  config.py
src/magicstory_cli/providers/: base.py  factory.py  minimax.py  openai_compatible.py  vision_provider.py  volcengine.py
src/magicstory_cli/rendering/: html_renderer.py  pdf.py
src/magicstory_cli/utils/: files.py  json_tools.py  prompts.py
templates/: book.html.jinja2
tests/: test_build_pipeline.py  test_character_seed_e2e.py  test_cli.py  test_config.py  test_e2e_cli.py  test_illustrator.py  test_rendering.py  test_story_planner.py  test_volcengine_provider.py
